updated l10n and taiwan fix. Added API language code separator abstraction to yvapi

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -126,6 +126,9 @@ es:
     like button text:                           "Me Gusta"
     unlike button text:                         "No Me Gusta"
   notes:
+    public:                                     ""
+    private:                                    ""
+    draft:                                      ""
     creation form errors:                       "El (los) siguiente(s) error(es) no permitieron la creación de su nota:"
     status field:                               "Status:"
     reference field:                            "Referencia(s):"
@@ -170,7 +173,8 @@ es:
     select another chapter:                     "Escoge un Capítulo Diferente"
     view in reader:                             "ver%(referencia) en lector"
   users:
-    no connection friends:                      ""
+    settings:                                   ""
+    no connection friends:                      "Aparentemente ninguno de sus amigos de %{connection} está conectado aún a YouVersion."
     creation form errors:                       "El (los) siguiente(s) error(es) no permitieron la creación de su cuenta:"
     profile form errors:                        "El (los) siguiente(s) error(es) no permitieron actualizar su perfil:"
     email address:                              "Correo Electrónico:"
@@ -189,6 +193,7 @@ es:
     following title:                            "Personas a las que sigo"
     user does not follow you:                   "%{user} no le sigue"
     recent activity:                            "Actividad Reciente"
+    my recent_activity:                         ""
     started following:                          "Empezó a seguir"
     subscribed to plan:                         "Usuarios suscritos a %{plan}"
     reading:                                    "Usuarios Siguiendo Este Plan"    
@@ -204,7 +209,6 @@ es:
     edit notifications:                         "Gestionar Notificaciones"
     edit connections:                           "Cuentas Conectadas"
     edit devices:                               "Dispositivos Conectados"
-    my recent activity:                         "Mi Actividad Reciente"
     user recent activity:                       "%{user}'s Actividad Reciente"
     my notes:                                   "My Notes"
     user notes:                                 "%{user}Notas"
@@ -215,9 +219,10 @@ es:
     user bookmarks:                             "%{user}Marcadores"
     my likes:                                   "Mis \"Me Gusta\""
     user likes:                                 "%{user}Me Gustan"
+    my badges:                                  ""
     revised date:                               "Última revisión en% {date}"
     update email copy:                          "Introduzca una nueva dirección de correo electrónico y haga clic en Actualizar Correo electrónico. Nosotros le enviaremos un enlace para confirmar su nueva dirección de correo electrónico."
-    update email button:                        "Actualizar correo electrónico"
+    edit email:                                 ""
     update email check:                         "Por favor revise su correo electrónico y haga clic en el enlace para confirmar su nueva dirección de correo electrónico."
     confirm update email success:               "¡Gracias! Usted ha actualizado su dirección de correo electrónico."
     confirm update email error:                 "Lo sentimos, hubo un problema al completar su cambio de dirección de correo electrónico."
@@ -349,8 +354,11 @@ es:
       reading_plans:                            "Notificarme con información sobre los Planes de Lectura que haya iniciado"
       update:                                   "Actualizar Notificaciones"
   bookmarks:
+    edit:                                       ""
+    delete:                                     ""
     title field:                                "Título"
     lables:                                     "Etiquetas"
+    all:                                        ""
     labels label:                               "Etiquetas:"
     title:                                      "Marcadores"
     not found:                                  "Los Marcadores le brindan una guía  de referencia rápida  a sus pasajes favoritos ó al último capítulo que leyó de un libro en particular.  Para agregar un marcador, seleccione el versículo en el lector de la Biblia y luego presione el botón de marcadores en la parte superior del lector."
@@ -363,11 +371,10 @@ es:
     loading:                                    "Cargando sus marcadores..."
   badges:
     earned a badge:                             "Una insignia ganada"
-    my badges:                                  "Mis Insignias"
     user badges:                                "Insignias de %{user}"
   plans:
     title:                                      "Planes de lectura"
-    browse by category:                         ""
+    browse by category:                         "Búsqueda por Categoría"
     browse plans:                               "Buscar %{category} planes"
     all:                                        "Todo"
     all plans:                                  "Todos los planes"
@@ -455,6 +462,7 @@ es:
     which day in plan:                          "Dia %{day} de %{total}"
     must start to complete:                     "Iniciar este plan para salvar lecturas  completadas"
   registration:
+    with facebook:                              ""
     benefits title:                             "Obtenga la Experiencia Completa"
     benefits blurb:                             "Crear una cuenta en YouVersion le da acceso a más funciones como marcadores y notas. Estas se mostrarán en cualquier dispositivo en el que usted inicie una sesión. Con una cuenta también se hace más fácil el poder compartir la Biblia con sus amigos, así que tome un minuto o dos y regístrese!"
     plan blurb:                                 "Parece que usted quiere iniciar un Plan de Lectura. Genial! Los planes le pueden ayudar a hacer de la Biblia parte de su vida diaria. Entre o inicie una cuenta abajo y empiece!"
@@ -479,24 +487,24 @@ es:
     all versions:                               "En Todas las Versiones en %{language_name}"
   donate:
     donate now:                                 "Done ahora"
-    donate now intl:                            ""
+    donate now intl:                            "o donar internacionalmente"
     promo 1:                                    "Por cada $1 que usted done, 10 personas más tendrán acceso a la Biblia en sus teléfonos móviles."
     promo 2:                                    "Con YouVersion, la Biblia siempre está cerca. Mire nuestro video."
     promo 3:                                    "Este año más de 5 billones de personas utilizarán un teléfono celular. Donar ahora."
     headline:                                   "Todos necesitan la Palabra de Dios."
     subhead:                                    "Ayude a la gente alrededor del mundo  a tener la Biblia en sus manos."
     copy:                                       "Imagínese poder darle una Biblia gratis a cada persona en el mundo. Cuando usted da YouVersion, hace precisamente eso. Vivimos en un tiempo con el que otros soñaron &andash; cuando cualquiera que tenga un teléfono puede tener acceso a la Biblia y experimentar la historia del amor de Dios por nosotros. Con su apoyo podemos continuar ayudando a más gente a pasar más tiempo en las Escrituras."
-    amount:                                     ""
-    name:                                       ""
-    card number:                                ""
-    card exp date:                              ""
-    receipt:                                    ""
-    preview:                                    ""
-    header copy:                                ""
-    header confirm copy:                        ""
-    donate now button:                          ""
-    email header:                               ""
-    email footer:                               ""
+    amount:                                     "Monto de la donación (DOLARES)"
+    name:                                       "Su Nombre"
+    card number:                                "Número de tarjeta de crédito"
+    card exp date:                              "Fecha de Expiración (MMAA)"
+    receipt:                                    "Envíeme por correo electrónico una copia de mi recibo"
+    preview:                                    "Vista Anticipada de la Donación "
+    header copy:                                "Juntos,podemos convertirnos en la generación más \"Biblio-Involucrada\" de la historia. Su respaldo significa que las personas podrán abrir la Palabra de Dios en más plataformas, en más lenguajes, en más versiones y en mas países que nunca antes. Por favor complete el formulario de abajo para realizar su donación. Tomaremos sun información de forma de pago en la siguiente pantalla."
+    header confirm copy:                        "Juntos, podemos convertirnos en la generación más \"Biblio-Involucrada\" de la historia. Su respaldo significa que las personas podran abrir la Palabra de Dios en más plataformas, en más lenguajes. en más versiones y en más países que nunca antes. Presione el botón de \"Donar Ahora\" para realizar su donación"
+    donate now button:                          "Done ahora"
+    email header:                               "YouVersion, un ministerio de LifeChurch.tv, ha recibido su donación. Ningún producto o servicio fue provisto a cambio de dicha donación, a excepción de beneficios religiosos intangibles. Por favor contactenos al correo giving@lifechurch.tv con sus preguntas"
+    email footer:                               "Su donación va a ayudar a que personas alrededor del mundo se enamoren de la Palabra de Dios."
   download ad:
     title:                                      "Descarga la Aplicación Gratuita de la Biblia"
     line 1:                                     "Cientos de versiones en muchos"
@@ -563,3 +571,24 @@ es:
     symbian:                                    "Symbian"
     mobile web:                                 "Red móvil"
     amazon:                                     "Kindle Fire"
+  pages:
+    generic_error:
+      title:                                    ""
+      explanation:                              ""
+      our action:                               ""
+  shared:
+    menu_settings:
+        title:                                  ""
+        close:                                  ""
+        font:                                   ""
+        font1:                                  ""
+        font2:                                  ""
+        font3:                                  ""
+        font4:                                  ""
+        font size:                              ""
+        small:                                  ""
+        medium:                                 ""
+        large:                                  ""
+        highlights:                             ""
+        on:                                     ""
+        off:                                    ""
