--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -126,6 +126,9 @@ sv:
     like button text:                           "Gilla"
     unlike button text:                         "Sluta gilla"
   notes:
+    public:                                     ""
+    private:                                    ""
+    draft:                                      ""
     creation form errors:                       "Följande fel hindrade dig att skapa din anteckning:"
     status field:                               "Status:"
     reference field:                            "Referens(er):"
@@ -170,7 +173,8 @@ sv:
     select another chapter:                     "Välj ett annat kapitel"
     view in reader:                             "Visa %{reference} i läsare"
   users:
-    no connection friends:                      ""
+    settings:                                   ""
+    no connection friends:                      "Ingen av dina vänner på %{connection} finns ännu på YouVerson."
     creation form errors:                       "Följande fel förhindrade skapandet av ditt konto:"
     profile form errors:                        "Följande fel förhindrade uppdateringen av din profil:"
     email address:                              "E-postadress"
@@ -189,6 +193,7 @@ sv:
     following title:                            "Personer jag följer"
     user does not follow you:                   "%{user} följer inte dig."
     recent activity:                            "Senaste aktivitet"
+    my recent_activity:                         ""
     started following:                          "Börjat följa"
     subscribed to plan:                         "Användare som prenumerera på %{plan}"
     reading:                                    "Användare som läser denna plan"    
@@ -204,7 +209,6 @@ sv:
     edit notifications:                         "Hantera meddelanden"
     edit connections:                           "Anslutna konton"
     edit devices:                               "Anslutna enheter"
-    my recent activity:                         "Min senaste aktivitet"
     user recent activity:                       "%{user}s senaste aktivitet"
     my notes:                                   "My Notes"
     user notes:                                 "%{user}s anteckningar"
@@ -215,9 +219,10 @@ sv:
     user bookmarks:                             "%{user}s bokmärken"
     my likes:                                   "Mina länkar"
     user likes:                                 "%{user}s länkar"
+    my badges:                                  ""
     revised date:                               "Senast ändrad den %{date}"
     update email copy:                          "Ange en ny e-postadress och klicka Uppdatera e-post. Vi kommer att skicka dig en länk för att bekräfta din nya e-postadress."
-    update email button:                        "Uppdatera e-post"
+    edit email:                                 ""
     update email check:                         "Kontrollera din e-post och klicka på länken för att bekräfta din nya e-postadress."
     confirm update email success:               "Tack! Du har uppdaterat din e-postadress."
     confirm update email error:                 "Det uppstod ett problem vid försök att fullfölja din ändring av e-postadress."
@@ -349,8 +354,11 @@ sv:
       reading_plans:                            "Meddela mig med information för läsplaner jag startat."
       update:                                   "Uppdateringsmeddelanden"
   bookmarks:
+    edit:                                       ""
+    delete:                                     ""
     title field:                                "Titel"
     lables:                                     "Etiketter"
+    all:                                        ""
     labels label:                               "Etiketter:"
     title:                                      "Bokmärken"
     not found:                                  "Bokmärken ger dig en snabb referens till dina favoritpassager eller till det senaste kapitlet du läste i en viss bok. För att lägga till ett bokmärke väljer du versen i Bibelläsaren och klickar sedan på knappen Markerat högst upp i läsaren."
@@ -363,11 +371,10 @@ sv:
     loading:                                    "Laddar dina bokmärken..."
   badges:
     earned a badge:                             "Fått ett emblem"
-    my badges:                                  "Mina emblem"
     user badges:                                "%{user}s emblem"
   plans:
     title:                                      "Läsplaner"
-    browse by category:                         ""
+    browse by category:                         "Bläddra efter katergori"
     browse plans:                               "Bläddra planer i %{category}"
     all:                                        "Alla"
     all plans:                                  "Alla planer"
@@ -455,6 +462,7 @@ sv:
     which day in plan:                          "Dag %{day} av %{total}"
     must start to complete:                     "Starta denna läsplan för att spara utförd läsning!"
   registration:
+    with facebook:                              ""
     benefits title:                             "Få hela upplevelsen"
     benefits blurb:                             "Att skapa ett YouVersion-konto ger dig tillgång till fler funktioner som till exempel bokmärken och anteckningar. De kommer att visas på valfri enhet där du är inloggad. Ett konto gör det också enklare att dela Bibeln med dina vänner, så ge det en minut eller två och registrera dig!"
     plan blurb:                                 "Det ser ut som att du vill starta en läsplan. Smart! Planer kan hjälpa dig att göra Bibeln till en del av din vardag. Logga in eller skapa ett konto nedan och kom igång!"
@@ -479,22 +487,22 @@ sv:
     all versions:                               "Alla %{language_name} översättningar"
   donate:
     donate now:                                 "Donera nu"
-    donate now intl:                            ""
+    donate now intl:                            "eller donera internationellt"
     promo 1:                                    "För varje $1 du ger kommer ytterligare 10 personer få tillgång till Bibeln på sina mobiltelefoner."
     promo 2:                                    "Med YouVersion är Bibeln alltid nära. Titta på vår video."
     promo 3:                                    "I år kommer över 5 miljarder människor använda en mobiltelefon. Donera nu."
     headline:                                   "Alla behöver Guds Ord."
     subhead:                                    "Hjälp människor runt hela värden att komma i kontakt med Bibeln."
     copy:                                       "Tänk om du kunde ge alla i världen en gratis bibel. När du ger till YouVersion kan du göra just det. Vi lever i en tid som andra bara kunnat drömma om &ndash; när någon med en telefon kan komma åt Bibeln och uppleva berättelsen om Guds kärlek till oss. Med ditt stöd kan vi fortsätta att hjälpa fler människor tillbringa mer tid i Skriften."
-    amount:                                     ""
-    name:                                       ""
-    card number:                                ""
-    card exp date:                              ""
-    receipt:                                    ""
-    preview:                                    ""
+    amount:                                     "donationssumma (USD)"
+    name:                                       "Ditt namn"
+    card number:                                "Kreditkortsnummer"
+    card exp date:                              "Utgångsdatum (MMÅÅ)"
+    receipt:                                    "E-posta mig en kopia på kvittot."
+    preview:                                    "Förhandsgranska donation"
     header copy:                                ""
     header confirm copy:                        ""
-    donate now button:                          ""
+    donate now button:                          "Donera nu"
     email header:                               ""
     email footer:                               ""
   download ad:
@@ -563,3 +571,24 @@ sv:
     symbian:                                    "Symbian"
     mobile web:                                 "Mobil-Webb"
     amazon:                                     "Kindle Fire"
+  pages:
+    generic_error:
+      title:                                    ""
+      explanation:                              ""
+      our action:                               ""
+  shared:
+    menu_settings:
+        title:                                  ""
+        close:                                  ""
+        font:                                   ""
+        font1:                                  ""
+        font2:                                  ""
+        font3:                                  ""
+        font4:                                  ""
+        font size:                              ""
+        small:                                  ""
+        medium:                                 ""
+        large:                                  ""
+        highlights:                             ""
+        on:                                     ""
+        off:                                    ""
