--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -126,6 +126,9 @@ fr:
     like button text:                           "J'aime"
     unlike button text:                         "Je n'aime plus"
   notes:
+    public:                                     ""
+    private:                                    ""
+    draft:                                      ""
     creation form errors:                       "La ou les erreurs suivantes empêchent la création de votre note :"
     status field:                               "Status:"
     reference field:                            "Référence(s) :"
@@ -170,6 +173,7 @@ fr:
     select another chapter:                     "Choisir un autre chapitre"
     view in reader:                             "Voir%{reference} dans le lecteur"
   users:
+    settings:                                   ""
     no connection friends:                      ""
     creation form errors:                       "L'erreur (les erreurs) suivante(s) empêche(nt) la création de votre compte:"
     profile form errors:                        "L'erreur (les erreurs) suivante(s) empêche(nt) la création de votre profil:"
@@ -189,6 +193,7 @@ fr:
     following title:                            "Personnes que je suis"
     user does not follow you:                   "%{user} ne vous suit pas"
     recent activity:                            "Les activités récentes"
+    my recent_activity:                         ""
     started following:                          "S'est abonné"
     subscribed to plan:                         "Les utilisateurs inscrits au %{plan}"
     reading:                                    "Les utilisateurs lisant ce plan"    
@@ -204,7 +209,6 @@ fr:
     edit notifications:                         "Gérer les notifications"
     edit connections:                           "Comptes connectés"
     edit devices:                               "Appareils connectés"
-    my recent activity:                         "Mes activités récentes"
     user recent activity:                       "Les activités récentes de %{user}"
     my notes:                                   "My Notes"
     user notes:                                 "Les notes de %{user}"
@@ -215,9 +219,10 @@ fr:
     user bookmarks:                             "Les signets de %{user}"
     my likes:                                   "Mes mentions j'aime"
     user likes:                                 "Les mentions j'aime de %{user}"
+    my badges:                                  ""
     revised date:                               "Dernière révision faite le %{date}"
     update email copy:                          "Entrez un nouvel email et cliquez sur Mettre à jour l'adresse Email. Vous recevrez un lien pour confirmer votre nouvelle adresse."
-    update email button:                        "Mettre à jour l'adresse Email"
+    edit email:                                 ""
     update email check:                         "Veuillez consulter votre Email et cliquer sur le lien pour confirmer votre nouvelle adresse mail"
     confirm update email success:               "Merci! Vous avez mis à jour votre adresse Email."
     confirm update email error:                 "Désolé, un problème est survenu lors du changement de votre adresse Email."
@@ -349,8 +354,11 @@ fr:
       reading_plans:                            "M'informer au sujet des plans de lecture que j'ai commencés"
       update:                                   "Mettre à jour mes alertes"
   bookmarks:
+    edit:                                       ""
+    delete:                                     ""
     title field:                                "Titre"
     lables:                                     "Étiquettes"
+    all:                                        ""
     labels label:                               "Étiquettes:"
     title:                                      "Favoris"
     not found:                                  "Les signets vous permettent de vous souvenir de ce que vous avez lu en dernier, vous servant ainsi de guide de référence rapide vers vos passages préférés ou encore vers le dernier chapitre que vous avez lu dans un livre en particulier. Afin de créer un signet, sélectionnez un verset dans le lecteur de la Bible, puis cliquez le bouton Signet."
@@ -363,7 +371,6 @@ fr:
     loading:                                    ""
   badges:
     earned a badge:                             "Gagné un badge"
-    my badges:                                  "Mes badges"
     user badges:                                "Les badges de %{user}"
   plans:
     title:                                      "Les plans de lecture"
@@ -455,6 +462,7 @@ fr:
     which day in plan:                          "Jour %{day} de %{total}"
     must start to complete:                     "Commencez ce plan pour sauvegarder les lectures achevées!"
   registration:
+    with facebook:                              ""
     benefits title:                             "Vivez Pleinement l'Expérience"
     benefits blurb:                             "Créer un compte YouVersion vous donne accès à une panoplie d'options telles que les favoris et les notes. Elles s'afficheront sur tout appareil d'où vous vous connecterez. Un compte vous permet également de partager la Bible avec vos amis. Prenez une minute et pour vous inscrire!"
     plan blurb:                                 "Disposé à entamer un plan de lecture? Astucieux!  Les plans vous aident à intégrer la Bible dans votre quotidien. Connectez-vous ou créez un compte en cliquant sur le lien ci-dessous, puis laissez-vous conduire!"
@@ -494,7 +502,7 @@ fr:
     preview:                                    ""
     header copy:                                ""
     header confirm copy:                        ""
-    donate now button:                          ""
+    donate now button:                          "Faire un don maintenant"
     email header:                               ""
     email footer:                               ""
   download ad:
@@ -563,3 +571,24 @@ fr:
     symbian:                                    "Symbian"
     mobile web:                                 "Mobile Web"
     amazon:                                     ""
+  pages:
+    generic_error:
+      title:                                    ""
+      explanation:                              ""
+      our action:                               ""
+  shared:
+    menu_settings:
+        title:                                  ""
+        close:                                  ""
+        font:                                   ""
+        font1:                                  ""
+        font2:                                  ""
+        font3:                                  ""
+        font4:                                  ""
+        font size:                              ""
+        small:                                  ""
+        medium:                                 ""
+        large:                                  ""
+        highlights:                             ""
+        on:                                     ""
+        off:                                    ""
