--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -126,6 +126,9 @@ ko:
     like button text:                           "좋아요"
     unlike button text:                         "좋아요 취소"
   notes:
+    public:                                     ""
+    private:                                    ""
+    draft:                                      ""
     creation form errors:                       "다음의 오류로인해서 노트가 생성되지 않았습니다:"
     status field:                               "Status:"
     reference field:                            "참조구절:"
@@ -170,7 +173,8 @@ ko:
     select another chapter:                     "다른 장을 택하세요"
     view in reader:                             "리더에서 %{reference}  보기"
   users:
-    no connection friends:                      ""
+    settings:                                   ""
+    no connection friends:                      "%{connection} 친구들중 유버전에 가입하시 분이 없습니다."
     creation form errors:                       "다음의 오류로 인해서 계정을 만들지 못했습니다."
     profile form errors:                        "다음의 오류로 인해서 프로필을 변경하지 못했습니다."
     email address:                              "이메일 주소"
@@ -189,6 +193,7 @@ ko:
     following title:                            "팔로윙하는 사람들"
     user does not follow you:                   "%{user} 님은 당신을 팔로우하지 않습니다."
     recent activity:                            "최근활동"
+    my recent_activity:                         ""
     started following:                          "팔로우를 시작했습니다."
     subscribed to plan:                         "%{plan} 에 등록하신 분들"
     reading:                                    "이 계획을 읽고 계신 분들"    
@@ -204,7 +209,6 @@ ko:
     edit notifications:                         "알림기능 관리"
     edit connections:                           "접속 계정"
     edit devices:                               "접속 기기"
-    my recent activity:                         "최근활동"
     user recent activity:                       "%{user} 님의 최근활동"
     my notes:                                   "My Notes"
     user notes:                                 "%{user} 님 노트"
@@ -215,9 +219,10 @@ ko:
     user bookmarks:                             "%{user} 님 책갈피"
     my likes:                                   "내 좋아요"
     user likes:                                 "%{user} 님 좋아요"
+    my badges:                                  ""
     revised date:                               "%{date} 에 최정 수정됨"
     update email copy:                          "새 이메일 주소를 입력후 이메일 변경을 클릭하세요. 새 이메일 주소 확인을 위한 인증메일을 보내겠습니다."
-    update email button:                        "이메일 변경"
+    edit email:                                 ""
     update email check:                         "받으신 이메일에서 새 이메일 주소 확인 링크를 클릭하세요."
     confirm update email success:               "감사합니다! 이메일 주소가 변경되었습니다."
     confirm update email error:                 "죄송합니다. 이메일 주소 변경시 문제가 발생하였습니다."
@@ -349,8 +354,11 @@ ko:
       reading_plans:                            "시작한 읽기 계획에 대한 상세정보 알림"
       update:                                   "업데이트 알림"
   bookmarks:
+    edit:                                       ""
+    delete:                                     ""
     title field:                                "제목"
     lables:                                     "라벨"
+    all:                                        ""
     labels label:                               "라벨:"
     title:                                      "책갈피"
     not found:                                  "책갈피는 좋아하는 구절이나 마지막으로 읽은 부분으로 즉시 이동할 수 있도록 도와드립니다. 책갈피를 해두기 위해서는, 먼저 성경 리더에서 원하는 구절을 선택한 후 리더 상단의 '선택' 버튼을 클릭하면 됩니다."
@@ -363,11 +371,10 @@ ko:
     loading:                                    "책갈피 가져오는 중..."
   badges:
     earned a badge:                             "배지 획득"
-    my badges:                                  "내 배지"
     user badges:                                "%{user}님의 배지"
   plans:
     title:                                      "성경읽기 계획"
-    browse by category:                         ""
+    browse by category:                         "카테고리별 보기"
     browse plans:                               "%{category} 항목의 계획 보기"
     all:                                        "전체"
     all plans:                                  "전체 계획"
@@ -455,6 +462,7 @@ ko:
     which day in plan:                          "%{total}일 중 %{day}일"
     must start to complete:                     "읽기를 저장하려면 먼저 이 읽기계획을 시작해야 합니다."
   registration:
+    with facebook:                              ""
     benefits title:                             "완전한 체험을 하세요"
     benefits blurb:                             "유버전 계정을 만드시면 책갈피 및 노트와 같은 더 많은 기능들을 활용할 수 있습니다. 어느 장치에서 로그인을 하든지 관계 없이 확인이 가능합니다. 계정을 만들면 친구들과 말씀을 공유하는 것이 더 쉬워집니다. 지금 가입하세요!"
     plan blurb:                                 "읽기 계획을 시작하기 원하시나요. 현명한 선택입니다!  읽기 계획들은 성경이 일상의 삶 속에 한 부분으로 자리잡을 수 있게 도와드릴 것입니다 . 아래에서 로그인 하거나  계정을 만든 후 바로 시작하세요."
@@ -479,24 +487,24 @@ ko:
     all versions:                               "%{language_name} 전체 번역본"
   donate:
     donate now:                                 "지금 후원하기"
-    donate now intl:                            ""
+    donate now intl:                            "해외에서 후원하기"
     promo 1:                                    "여러분의 1불이 10명의 사람들이 자신의 휴대전화에서 성경을 볼 수 있게 합니다."
     promo 2:                                    "유버전으로 성경은 항상 곁에 있습니다. 동영상을 보세요."
     promo 3:                                    "올해 50억명 이상의 사람들이 휴대폰을 사용할 것입니다. 지금 후원하세요."
     headline:                                   "우리 모두 하나님의 말씀이 필요합니다."
     subhead:                                    "지구촌 모든 분들이 손안의 성경을 가질 수있도록 도와주세요."
     copy:                                       "전 세계의 모든 이들에게 무료로 성경을 줄 수 있다는 상상을 해보세요. 유버전을 후원하는 것으로 가능해집니다. 상상을 현실로 이루고 있습니다. &ndash; 휴대폰을 가진 사람이면 누구든지 성경을 접할 수 있고 우리를 향한 하나님의 사랑에 대한 이야기를 경험할 수 있기 때문입니다. 여러분의 후원을 통해, 더 많은 사람들이 보다 많은 시간을 성경과 함께 할 수 있도록 도울 수 있습니다."
-    amount:                                     ""
-    name:                                       ""
-    card number:                                ""
-    card exp date:                              ""
-    receipt:                                    ""
-    preview:                                    ""
-    header copy:                                ""
-    header confirm copy:                        ""
-    donate now button:                          ""
-    email header:                               ""
-    email footer:                               ""
+    amount:                                     "후원금(미화 달라)"
+    name:                                       "후원자 이름"
+    card number:                                "크레딧 카드 번호"
+    card exp date:                              "유효기간 (MMYY)"
+    receipt:                                    "영수증을 이메일로 내게 보내주세요"
+    preview:                                    "후원내용 미리보기"
+    header copy:                                "다 함께 동참할 때 우리는 역사상 성경을 가장 많이 접하는 세대가 될 수있습니다.  이 후원은 더 많은 나라에서 더 많은 사람들이 더 많은 언어로 된 번역본을 더 많은 기기를 통해서 하나님의 말씀을 접할 수있도록 도와줍니다.  후원을 위해서 먼저 아래의 양식을 작성하시고, 다음 스크린에서 지불 방법을 적어주세요."
+    header confirm copy:                        "다 함께 동참할 때 우리는 역사상 성경을 가장 많이 접하는 세대가 될 수있습니다.  이 후원은 더 많은 나라에서 더 많은 사람들이 더 많은 언어로 된 번역본을 더 많은 기기를 통해서 하나님의 말씀을 접할 수있도록 도와줍니다.  후원을 하실려면 지금 후원하기 를 클릭해주세요."
+    donate now button:                          "지금 후원하기"
+    email header:                               "LifeChurch.tv 교회 사역의 하나인 유버전은 여러분의 후원을 받습니다.  후원의 보답으로 보이지않는 종교적 이점 외의 다른 어떤 물건이나 서비스를 제공하지 않습니다.  질문이 있으시면 giving@lifechurch.tv 로 보내주세요."
+    email footer:                               "선생님의 후원금은 지구촌 사람들로 하여금 하나님의 말씀을 사랑하게 하는데 사용되어집니다."
   download ad:
     title:                                      "무료 성경앱을 다운로드하세요"
     line 1:                                     "어디서나 함께 할 수 있는"
@@ -563,3 +571,24 @@ ko:
     symbian:                                    "심비안"
     mobile web:                                 "모바일 웹"
     amazon:                                     "킨들 파이어"
+  pages:
+    generic_error:
+      title:                                    ""
+      explanation:                              ""
+      our action:                               ""
+  shared:
+    menu_settings:
+        title:                                  ""
+        close:                                  ""
+        font:                                   ""
+        font1:                                  ""
+        font2:                                  ""
+        font3:                                  ""
+        font4:                                  ""
+        font size:                              ""
+        small:                                  ""
+        medium:                                 ""
+        large:                                  ""
+        highlights:                             ""
+        on:                                     ""
+        off:                                    ""
