--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -126,6 +126,9 @@
     like button text:                           "Lik"
     unlike button text:                         "Ikke lik"
   notes:
+    public:                                     ""
+    private:                                    ""
+    draft:                                      ""
     creation form errors:                       "Følgende feil forhindret opprettelsen av ditt notat:"
     status field:                               "Status:"
     reference field:                            "Referanse(r):"
@@ -170,6 +173,7 @@
     select another chapter:                     "Velg et annet kapittel"
     view in reader:                             "Vis %{reference} i lesemodus"
   users:
+    settings:                                   ""
     no connection friends:                      ""
     creation form errors:                       "De følgende feil(ene) forhindret opprettelsen av kontoen din:"
     profile form errors:                        "De følgende feil(ene) forhindret oppdatering av kontoen din:"
@@ -189,6 +193,7 @@
     following title:                            "Folk jeg følger"
     user does not follow you:                   "%{user} følger ikke deg."
     recent activity:                            "Nylig aktivitet"
+    my recent_activity:                         ""
     started following:                          "Startet å følge"
     subscribed to plan:                         "Brukere abonnerte på %{plan}"
     reading:                                    "Brukere som leser denne planen"    
@@ -204,7 +209,6 @@
     edit notifications:                         "Varslingsinnstillinger"
     edit connections:                           "Tilknyttede kontoer"
     edit devices:                               "Tilknyttede enheter"
-    my recent activity:                         "Min nylige aktivitet"
     user recent activity:                       "%{user}s nylige aktivitet"
     my notes:                                   "My Notes"
     user notes:                                 "%{user}s notater"
@@ -215,9 +219,10 @@
     user bookmarks:                             "%{user}s bokmerker"
     my likes:                                   "Mine 'liker'"
     user likes:                                 "%{user}s 'liker'"
+    my badges:                                  ""
     revised date:                               "Sist endret den %{date}"
     update email copy:                          "Skriv inn en ny epost-adresse og klikk på Oppdater epost. Vi sender deg så en lenke for å bekrefte din nye epost-adresse."
-    update email button:                        "Oppdater epost"
+    edit email:                                 ""
     update email check:                         "Sjekk eposten din og klikk på lenken for å bekrefte din nye epost-adresse."
     confirm update email success:               "Takk! Vi har oppdatert epost-adressen din."
     confirm update email error:                 "Beklager, det oppsto et problem og epost-adressen din ble ikke endret."
@@ -349,8 +354,11 @@
       reading_plans:                            "Varsle meg om informasjon for leseplaner jeg følger."
       update:                                   "Oppdater varslinger"
   bookmarks:
+    edit:                                       ""
+    delete:                                     ""
     title field:                                "Tittel"
     lables:                                     "Emner"
+    all:                                        ""
     labels label:                               "Emner:"
     title:                                      "Bokmerker"
     not found:                                  "Bokmerker gir deg en rask tilgang på dine favoritt-tekster eller det siste kapittelet du leste i en spesiell bok. For å legge til et bokmerke velger du vers når du leser og trykker på ikonet øverst for bokmerke."
@@ -363,7 +371,6 @@
     loading:                                    ""
   badges:
     earned a badge:                             "Fått et merke"
-    my badges:                                  "Mine merker"
     user badges:                                "%{user}s merker"
   plans:
     title:                                      "Leseplaner"
@@ -455,6 +462,7 @@
     which day in plan:                          "Dag %{day} av %{total}"
     must start to complete:                     "Abonner på denne planen for å lagre det du har lest."
   registration:
+    with facebook:                              ""
     benefits title:                             "Få den fullstendige opplevelsen"
     benefits blurb:                             "Å opprette en YouVersion-konto gir deg tilgang til flere funksjoner som bokmerker og notater. De vil vises på en hvilken som helst enhet der du er innlogget. En brukerkonto gjør det også enklere å dele Bibelen med dine venner, så ta et minutt eller to og registrer deg."
     plan blurb:                                 "Det ser ut til at du ønsker å starte på en leseplan. Smart! Planer kan hjelpe deg å gjøre Bibelen til en del av ditt dagligliv. Logg inn eller registrer deg under og kom i gang!"
@@ -494,7 +502,7 @@
     preview:                                    ""
     header copy:                                ""
     header confirm copy:                        ""
-    donate now button:                          ""
+    donate now button:                          "Gi nå"
     email header:                               ""
     email footer:                               ""
   download ad:
@@ -563,3 +571,24 @@
     symbian:                                    "Symbian"
     mobile web:                                 "Mobilt nett"
     amazon:                                     ""
+  pages:
+    generic_error:
+      title:                                    ""
+      explanation:                              ""
+      our action:                               ""
+  shared:
+    menu_settings:
+        title:                                  ""
+        close:                                  ""
+        font:                                   ""
+        font1:                                  ""
+        font2:                                  ""
+        font3:                                  ""
+        font4:                                  ""
+        font size:                              ""
+        small:                                  ""
+        medium:                                 ""
+        large:                                  ""
+        highlights:                             ""
+        on:                                     ""
+        off:                                    ""
